--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.75.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.9",
+    "gsap": "^3.14.2",
     "next": "15.5.9",
     "plotly.js-dist-min": "^3.1.1",
     "react": "19.1.0",
