--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.9",
     "gsap": "^3.14.2",
+    "jspdf": "^3.0.4",
     "next": "15.5.9",
     "plotly.js-dist-min": "^3.1.1",
     "react": "19.1.0",
