--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.14.2",
     "jspdf": "^3.0.4",
     "next": "15.5.9",
+    "nodemailer": "^6.9.15",
     "plotly.js-dist-min": "^3.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/pg": "^8.16.0",
     "@types/plotly.js": "^3.0.7",
     "@types/react": "^19",
